# lightning_stats

./: .env.example  .env.exemple  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
migrations/2025-07-10-041836_create_nodes/: up.sql
src/: main.rs
src/infra/: database.rs  environment.rs  mod.rs  schema.rs
src/models/: node.rs
src/services/: mod.rs  node.rs  status.rs
