[package]
name = "lightning_stats"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.8"
diesel = { version = "2.2.0", features = ["postgres"] }
chrono = { version = "0.4.41", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
