[package]
name = "lightning_stats"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.8"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "numeric"] }
chrono = { version = "0.4.41", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
log = "0.4.27"
r2d2 = "0.8.10"
